--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^17.0.1",
     "react-modal": "^3.16.1",
     "react-scripts": "4.0.1",
+    "sass": "^1.56.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "web-vitals": "^0.2.4"
   },
